--- a/packagebuild/PKGBUILD
+++ b/packagebuild/PKGBUILD
@@ -5,11 +5,11 @@ pkgver=1.0
 pkgrel=2
 pkgdesc='EndeavourOS Theme for SDDM'
 arch=('any')
-url="https://github.com/endeavouros-team/$pkgname"
+url="https://github.com/endeavouros-team"
 license=('GPL')
 depends=('sddm')
 makedepends=('git')
-source=('git+https://github.com/endeavouros-team/$pkgname' 'eos-sddm-theme.install')
+source=('git+https://github.com/endeavouros-team/eos-sddm-theme.git' 'eos-sddm-theme.install')
 sha256sums=('SKIP' 'SKIP')
 
 package() {
